2003-11-24  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (QM_TOOLS): Do not set it.
	(clean): Remove generated documentation.
	(distclean): Do not remove qm/__version.py.
	* MANIFEST.in: Include GNUmakefile.in, configure.in, and
	configure.
	* config.guess: Remove.
	* install-sh: Likewise.

	* configure.in (QM_MAJOR_VER): Do not AC_SUBST it.
	(QM_MINOR_VER): Likewise.
	(QM_RELEASE_VER): Likewise.
	(QM_VERSION): Likewise.
	* configure: Regenerated.
	* version: Remove.
	* qm/__version.py.in: Likewise.
	* qm/__version.py: New file.

	* qm.spec.in: Remove.
	* .cvsignore: Remove qm.spec.
	* GNUmakefile.in (distclean): Do not remove qm.spec.
	* configure.in: Do not generate it.

2003-11-24  Stefan Seefeld  <seefeld@sympatico.ca>

	* qm/test/result.py: Replace 'property' by 'annotation'.
	* qm/test/share/dtds/result.dtd: Likewise.

2003-11-23  Mark Mitchell  <mark@codesourcery.com>

	* setup.py: Tidy up.  Use "qmtest.py" as the name of the main
	script under Windows.
	* qm/__init__.py: Do not honor qm.config settings under Windows.
	* qm/test/.cvsignore: Add qmtest.py.
	* qm/test/execution_engine.py
	(ExecutionEngine.IsTerminationRequested): Rename to ..
	(ExecutionEngine._IsTerminationRequested): ... this.
	* qm/test/execution_thread.py
	(ExecutionThread.IsTerminationRequested): Rename to ..
	(ExecutionEngine._IsTerminationRequested): ... this.
	* qm/test/qmtest: Do not honor rel_libdir on Windows.
	* qm/test/clasess/pickle_result_stream.py
	(PickleResultStream._is_binary_file): Set it.
	* qm/test/doc/tour.xml: Update for changes in installation
	procedures.
	* qmdist/command/install_scripts.py (install_scripts.run): Process
	both the "qmtest" and the "qmtest.py" script.
	* scripts/qm-release: Remove.

	* .cvsignore: Add build, dist, and MANIFEST.
	* MANIFEST.in: Update for recent changes.
	* setup.py: Put qm/test/classes in lib, not share.  Add more
	metadata.  Correct documentation handling.
	* qm/__init__.py: Import lib_dir from qm.config.