@@ -16,6 +16,7 @@
 #######################################################################
 
 import os
+import qm.common
 import signal
 import string
 import sys
@@ -223,7 +224,7 @@ class Executable(object):
             exception_pipe = os.pipe()
             # Mark the write end as close-on-exec so that the file
             # descriptor is not passed on to the child.
-            self._MakeCloseOnExec(exception_pipe[1])
+            qm.common.close_file_on_exec(exception_pipe[1])
         else:
             exception_pipe = None
 
@@ -323,27 +324,6 @@ class Executable(object):
         return self.__child
     
         
-    def _MakeCloseOnExec(self, fd):
-        """Prevent 'fd' from being inherited across 'exec'.
-
-        'fd' -- A file descriptor, or object providing a 'fileno()'
-        method.
-
-        UNIX only."""
-
-        assert sys.platform != "win32"
-
-        flags = fcntl.fcntl(fd, fcntl.F_GETFD)
-        try:
-            flags |= fcntl.FD_CLOEXEC
-        except AttributeError:
-            # The Python 2.2 RPM shipped with Red Hat Linux 7.3 does
-            # not define FD_CLOEXEC.  Fortunately, FD_CLOEXEC is 1 on
-            # every UNIX system.
-            flags |= 1
-        fcntl.fcntl(fd, fcntl.F_SETFD, flags)
-
-
     def __CreateCommandLine(self, arguments):
         """Return a string giving the process command line.
 
@@ -888,7 +868,7 @@ class RedirectedExecutable(TimeoutExecutable):
         else:
             pipe = os.pipe()
             for fd in pipe:
-                self._MakeCloseOnExec(fd)
+                qm.common.close_file_on_exec(fd)
             return pipe
 
 
